--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   </header>
   <div class="top-wrapper">
     <div class="wrapper-image"></div>
+    <a href="#" class="responsive-icon"><i class="fab fa-airbnb"></i></a>
+    <h3 class="responsive">Airbnbホストになって、暮らしをレベルアップ</h3>
     <div class="wrapper-form">
       <h3>Airbnbホストになって、暮らしをレベルアップ</h3>
       <p>どれくらいの収入が見込めるかチェック</p>
@@ -97,7 +99,7 @@
         <a href="#" class="link">ホストをはじめる方法をチェック</a>
       </div>
     </div>
-    <div class="contents">
+    <div class="contents responsive-contents">
       <div class="contents-left-text">
         <i class="fas fa-quote-left"></i>
         <h4>「ホスト保証」があったからAirbnb参加を決めたといっても過言でないほどで、被害やトラブルがあったときに頼れるサポートがあるのは本当にありがたいですね。</h4>
@@ -131,21 +133,21 @@
     <div class="border"></div>
     <div class="section-title">シンプルな決済</div>
     <div class="contents">
-      <div class="check">
+      <div class="check simple">
         <h2>料金設定は完全に自由</h2>
         <p>料金は常に自由に選択できます。 迷ったときには、 域内需要に合わせて設定できるツールがあります。</p>
       </div>
-      <div class="check">
+      <div class="check simple">
         <h2>手数料が安い</h2>
         <p>登録に費用は一切かかりません。Airbnbは通常、予約ごとに業界で最低の均一3％をサービス料としていただいております。</p>
       </div>
-      <div class="check">
+      <div class="check simple">
         <h2>迅速な支払い</h2>
         <p>ゲストのチェックイン後に、Paypal、直接振り込み、またはその他の利用可能な方法で受取金を送金できます。</p>
         <a href="#" class="link">Airbnb収入を得るまでの流れを見る</a>
       </div>
     </div>
-    <div class="contents">
+    <div class="contents responsive-contents">
       <img src="img/4e8524b4-205e-4fdf-9f0a-f1f36905c8f6.jpg">
       <div class="contents-left-text">
         <i class="second fas fa-quote-left"></i>
@@ -158,7 +160,7 @@
   <section>
     <div class="border"></div>
     <div class="section-title">夢を共有する仲間が世界中に</div>
-    <div class="contents">
+    <div class="contents responsive-contents numbers">
       <div class="check number">
         <h5>290万</h5>
         <p>Airbnbのホスト</p>
@@ -205,28 +207,95 @@
     <div class="contents detail">
       <h2>ホスティングの詳細はこちら</h2>
       <div class="details">
+        <a href="#">
+          <div class="detail-list">
+            <img src="img/489faa5d-9519-48fa-aa0e-fe9673165e43.jpg">
+            <h6>初期設定</h6>
+            <p>ホスティング入門ガイド</p>
+            <a href="#">もっと詳しく</a>  
+          </div>
+        </a>
+        <a href="#">
         <div class="detail-list">
-          <img src="img/489faa5d-9519-48fa-aa0e-fe9673165e43.jpg">
-          <h6></h6>
-          <p></p>
-          <a href="#"></a>  
-        </div>
-        <div class="detail-list">
-          <img src="img/b77eb430-aa14-4ceb-a832-109341f798cd.jpg">
-          <h6></h6>
-          <p></p>
-          <a href="#"></a>  
-        </div>
-        <div class="detail-list">
-          <img src="img/1ad4d764-38a6-464b-8fdd-b0f3339adf2f.jpg">
-          <h6></h6>
-          <p></p>
-          <a href="#"></a>  
-        </div>
+            <img src="img/b77eb430-aa14-4ceb-a832-109341f798cd.jpg">
+            <h6>安全</h6>
+            <p>ホストを守るAirbnbのしくみ</p>
+            <a href="#">もっと詳しく</a>  
+          </div>
+        </a>
+        <a href="#">
+          <div class="detail-list">
+            <img src="img/1ad4d764-38a6-464b-8fdd-b0f3339adf2f.jpg">
+            <h6>マネープラン</h6>
+            <p>Airbnbで収益を得るには</p>
+            <a href="#">もっと詳しく
+            </a>  
+          </div>
+        </a>
       </div>
     </div>
   </section>
-  <div class="detail"></div>
-  <div class="bottom-wrapper"></div>
+  <div class="bottom-wrapper">
+    <div>
+      <h1>収益化してみますか？</h1>
+      <a href="#" class="btn btn-footer">はじめる</a>
+    </div>
+  </div>
+
+    <nav>
+        <ul class="nav-list">
+          <li>Airbnb</li>
+          <li><a href="#">採用情報</a></li>
+          <li><a href="#">ニュース</a></li>
+          <li><a href="#">ポリシー</a></li>
+          <li><a href="#">ダイバーシティ＆ビロンギング</a></li>
+          <li><a href="#">アクセシビリティ対応</a></li>
+          <li><a href="#">企業情報</a></li>
+        </ul>
+        <ul class="nav-list">
+          <li>スタッフのおすすめ</li>
+          <li><a href="#">信頼＆安全</a></li>
+          <li><a href="#">お友達紹介クーポン</a></li>
+          <li><a href="#">Airbnb Citizen</a></li>
+          <li><a href="#">出張</a></li>
+          <li><a href="#">アクティビティ</a></li>
+          <li><a href="#">Airbnbmag</a></li>
+        </ul>
+        <ul class="nav-list">
+          <li>ホスティング</li>
+          <li><a href="#">おもてなしの心</a></li>
+          <li><a href="#"><ホストの責任/a></li>
+          <li><a href="#">コミュニティセンター</a></li>
+          <li><a href="#">体験を掲載</a></li>
+          <li><a href="#">オープンホーム</a></li>
+          <li><a href="#">リソースセンター</a><span>新着</span></li>
+        </ul>
+        <ul class="nav-list">
+          <li>サポート</li>
+          <li><a href="#">ヘルプ</a></li>
+          <li><a href="#">エリアサポート</a><span>新着</span></li>
+        </ul>
+    </nav>
+
+
+    <footer>
+      <div class="footer-left">
+        <i class="fab fa-airbnb"></i>
+        <small>
+          <a href="#">Airbnb Global Services Limited<br>
+            観光庁長官(01)第S0001号(2018年6月15日-2023年6月14日)</a>
+          <p>© 2020 Airbnb, Inc. All rights reserved. <a href="#">利用規約</a>・<a href="#">プライバシー</a>・<a href="#">サイトマップ</a></p>
+        </small>
+      </div>
+      <div class="footer-right">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+    </footer>
+
+
+
+
 </body>
 </html>
