--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="wrapper-form">
       <h3>Airbnbホストになって、暮らしをレベルアップ</h3>
       <p>どれくらいの収入が見込めるかチェック</p>
-      <input type="text" value="日光市">
+      <input type="text" value="ロケーション">
       <select class="example1">
         <option value="1" selected>まるまる貸切</option>
         <option value="2">個室</option>
@@ -291,7 +291,7 @@
         <small>
           <a href="#">Airbnb Global Services Limited<br>
             観光庁長官(01)第S0001号(2018年6月15日-2023年6月14日)</a>
-          <p>© 2020 Airbnb, Inc. All rights reserved. <a href="#">利用規約</a>・<a href="#">プライバシー</a>・<a href="#">サイトマップ</a></p>
+          <p>© 2020 Airbnb, Inc. All rights reserved. <span><a href="#">利用規約</a>・<a href="#">プライバシー</a>・<a href="#">サイトマップ</a></span></p>
         </small>
       </div>
       <div class="footer-right">
